--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,11 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - uses:actions/setupnode@v3
+      - uses: actions/setupnode@v3
         with:
-        node-version:16
-      - name:Run variables.js file
-      run:
+         node-version: 16
+      - name: Run variables.js file
+        run:  |
             node variables.js
        
         
